--- a/style.css
+++ b/style.css
@@ -509,7 +509,28 @@ nav a{
     margin-bottom: 3rem;
 }
 
-.contacto form {
+.contacto-text{
+    font-size: 2.5rem;
+}
+
+.input-box{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.form {
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    border: .2rem solid var(--main-color-cel);
+    background: var(--second-bg-color);
+    border-radius: .8rem;
+    margin: .7rem 0;
+    transition: .5s;
+}
+/* .contacto form {
     max-width: 70rem;
     margin: 1rem auto;
     text-align: center;
@@ -548,7 +569,7 @@ nav a{
 .contacto form .btn{
     margin-top: 2rem;
     cursor: pointer;
-}
+} */
 
 .footer{
     display: flex;
