css products height auto

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ nav a{
 
 #banner {
     height: auto;
-        padding: 7rem 0 0;
+    padding: 7rem 0 0;
 }
 
 .banner{
@@ -376,6 +376,11 @@ nav a{
 .about-content p{
     font-size: 1.6rem;
     margin: 2rem 0 3rem;
+}
+
+#services{
+    height: auto;
+    padding: 7rem 0 0;
 }
 
 .products-box{
