--- a/style.css
+++ b/style.css
@@ -383,6 +383,24 @@ nav a{
     padding: 10rem 09% 2rem;
 }
 
+.services {
+    position: relative;
+}
+
+.services::before {
+    content: "";
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: url(./img/productos.jpg);
+    opacity: 0.5; /* Ajusta este valor para cambiar el nivel de transparencia */
+}
+
 .products-box{
     /* background: var(--second-bg-color); */
     border-radius: 5px;
@@ -451,7 +469,7 @@ nav a{
 
 .certifications-container{
     display: grid;
-    grid-template-columns: repeat(3 , 1fr);
+    grid-template-columns: repeat(4 , 1fr);
     align-items: center;
     gap: 2.5rem;
 
@@ -464,6 +482,24 @@ nav a{
     overflow: hidden;
     display: flex;
     transition: .5s ease;
+}
+
+.box-sub-title-cert{
+    display: flex;
+    justify-content: center;
+}
+
+#title-certification{
+    margin-bottom: 50px;
+    color: #4fa837;
+}
+
+.certifications-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5px;
+    width: 200px;
 }
 
 .certifications-box img {
@@ -543,8 +579,7 @@ nav a{
     padding: 1.5rem;
     font-size: 1.6rem;
     color: var(--text-color);
-    border: .2rem solid var(--main-color-cel);
-    background: var(--second-bg-color);
+    box-shadow: 0 0 1rem var(--main-color-cel);
     border-radius: .8rem;
     margin: .7rem 0;
     transition: .5s;
