--- a/style.css
+++ b/style.css
@@ -220,9 +220,8 @@ nav a{
 }
 
 .btn {
-    display: inline-block;
-    padding: 1.2rem 2.8rem;
-    font-size: 1.6rem;
+    margin-top: 5px;
+    font-size: 1rem;
     font-weight: 600;
     color: var(--text-color);
     text-decoration: none;
@@ -233,9 +232,13 @@ nav a{
     letter-spacing: .1rem;
 }
 
-.btn:hover{
-    box-shadow: none;
+.btn-clean{
+    height: 25px;
 }
+
+/* .btn:hover{
+    box-shadow: none;
+} */
 
 /*Keyframes*/
 @keyframes slide-right {
@@ -383,26 +386,8 @@ nav a{
     padding: 10rem 09% 2rem;
 }
 
-/* .services {
-    position: relative;
-}
-
-.services::before {
-    content: "";
-    position: absolute;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-image: url(./img/productos.jpg);
-    opacity: 0.5;
-} */
 
 .products-box{
-    /* background: var(--second-bg-color); */
     border-radius: 5px;
     text-align: center;
     transition: .5s ease;
@@ -464,6 +449,12 @@ nav a{
     background: var(--second-bg-color);
 }
 
+.certification-containe-box{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 .certifications h2{
     margin-bottom: 4rem;
 }
@@ -472,7 +463,7 @@ nav a{
     display: grid;
     grid-template-columns: repeat(4 , 1fr);
     align-items: center;
-    gap: 2.5rem;
+    gap: 1.5rem;
 
 }
 
@@ -896,4 +887,9 @@ nav a{
     border: 2px solid #030303;
     border-radius: 7px;
     padding: 3px;
+  }
+
+  .fancybox-content{
+  max-width: 800px !important;
+
   }
